# OmniUAV-MVA

./: .gitignore  MODIFICATIONS.md  MODULE_OWNERS.md  README.md
mva/: README.md  pyproject.toml
mva/src/mva/cli/: __init__.py  __main__.py  _common.py  ask.py  eval.py  index.py  ingest.py  live_ingest.py  perceive.py  query.py  ui.py
mva/tests/contracts/: test_cross_view_link.py  test_events.py  test_geometry_contracts.py  test_global_state_contracts.py  test_spatiotemporal_contracts.py
mva/tests/integration/: test_ingest_pipeline.py  test_mode_a_end_to_end.py
mva/tests/smoke/: test_service_smoke.py  test_stubs.py
mva/tests/unit/: _fakes.py  test_airsim_gt_adapter.py  test_cli_eval.py  test_cli_index.py  test_cli_query_service.py  test_cli_ui.py  test_cloud_client.py  test_datasets.py  test_detection_protocol.py  test_engine_retrieve_constraints.py  test_fusion_protocol.py  test_geometry_protocol.py  test_ingest_bbox_time_meta.py  test_ingest_jobs.py  test_ingest_llm_fallback.py  test_l0_image_dir.py  test_l0_stream.py  test_l1_detector.py  test_l1_tracker.py  test_l2_appearance.py  test_l2_geometric.py  test_l2_llm_linker.py  test_l3_algorithmic.py  test_l3_llm_reasoner.py  test_l4_llm_client.py  test_l5_chromadb.py  test_l5_chromadb_view_id_forms.py  test_l5_chromadb_where.py  test_l5_duckdb.py  test_l5_embedder.py  test_l6_memory.py  test_l6_planner.py  test_l6_rich_query.py  test_l6_structured_tools.py  test_l6_tools.py  test_l6_vlm_tools.py  test_live_ingest.py  test_orchestrator_render.py  test_perception_frame_source.py  test_perception_interfaces.py  (+15 more)
(+148 files in other folders)
